Fix: right space for timeline still visible on mobile

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -655,7 +655,7 @@ nav .filter-group .year, nav .filter-group .month {
     }
 
     .grid {
-        margin-right: 0;
+        padding-right: 0;
     }
 
     .picture {
